--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build-watch": "webpack -w",
-    "start": "nodemon server",
-    "start-me": "npm run build-watch & npm run start"
+    "start": "npm run build-watch & npm run start"
   },
   "author": "",
   "license": "ISC",
