--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,21 +4,27 @@
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#5fa8fb",
-    "description": "A simply readable Hacker News app.",
+    "description": "Find NYC wifi near you.",
+    "theme_color": "#5fa8fb",
     "icons": [
         {
-            "src": "./favicon-32x32.png",
+            "src": "favicon/favicon-32x32.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "./apple-touch-icon.png",
+            "src": "favicon/apple-touch-icon.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-192x192.png",
+            "src": "favicon/android-chrome-192x192.png",
             "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "favicon/big_sheepy.png",
+            "sizes" : "805x805",
             "type": "image/png"
         }
     ]
