--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build-watch": "webpack -w",
-    "start": "nodemon server",
+    "start": "nodemon app.js",
     "start-me": "npm run build-watch & npm run start"
   },
   "author": "",
@@ -17,11 +17,13 @@
     "express": "^4.16.2",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
+    "pg": "^7.4.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-google-maps": "^9.4.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "sequelize": "^4.32.1",
     "volleyball": "^1.4.1",
     "webpack": "^3.8.1"
   },
