--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "pg": "^7.4.1",
